--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-fastapi
-uvicorn
-tensorflow==2.15.0
-librosa
+fastapi==0.110.0
+uvicorn==0.29.0
+tensorflow-cpu==2.15.0
 numpy
-python-multipart
+pillow
